--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "@material-ui/icons": "4.9.1",
     "react": "16.13.0",
     "react-dom": "16.13.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "typescript": "^4.9.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,6 +32,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-dom": "^18.0.9",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.2"
   }
