--- a/package.json
+++ b/package.json
@@ -3,11 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@material-ui/core": "4.9.5",
     "@material-ui/icons": "4.9.1",
+    "@mui/material": "^5.11.1",
+    "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.2.1",
     "react": "16.13.0",
     "react-dom": "16.13.0",
-    "react-scripts": "3.4.0"
+    "react-redux": "^8.0.5",
+    "react-scripts": "3.4.0",
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.2",
+    "typescript": "^4.9.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,6 +41,11 @@
     ]
   },
   "devDependencies": {
+    "@types/react-dom": "^18.0.10",
+    "@types/react-redux": "^7.1.24",
+    "@types/redux": "^3.6.0",
+    "@types/redux-logger": "^3.0.9",
+    "@types/redux-thunk": "^2.1.0",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.2"
   }
