--- a/package.json
+++ b/package.json
@@ -3,20 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@material-ui/core": "4.9.5",
     "@material-ui/icons": "4.9.1",
-    "@mui/material": "^5.11.1",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.2",
     "@reduxjs/toolkit": "^1.9.1",
+    "@types/react-table": "^7.7.12",
     "axios": "^1.2.1",
-    "react": "16.13.0",
-    "react-dom": "16.13.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-loading-spin": "^2.1.9",
     "react-redux": "^8.0.5",
     "react-scripts": "3.4.0",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.2",
+    "styled-components": "^5.3.6",
     "typescript": "^4.9.4"
   },
   "scripts": {
@@ -41,11 +46,13 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@types/react-redux": "^7.1.24",
     "@types/redux": "^3.6.0",
     "@types/redux-logger": "^3.0.9",
     "@types/redux-thunk": "^2.1.0",
+    "@types/styled-components": "^5.1.26",
     "enzyme": "3.11.0",
     "enzyme-adapter-react-16": "1.15.2"
   }
